--- a/springCloud-config-server/src/main/resources/application.yml
+++ b/springCloud-config-server/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 eureka:
   client:
-    serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+    register-with-eureka: false
+    fetch-registry: false
 server:
   port: 8766
 
